--- a/order-test.yml
+++ b/order-test.yml
@@ -13,6 +13,9 @@ spring:
     port: 5672
     username: guest
     password: guest
+  redis:
+  host: 192.168.0.88
+  port: 6379
 env:
   test
 girl:
