--- a/api-gateway-dev.yml
+++ b/api-gateway-dev.yml
@@ -1,1 +1,17 @@
-
+zuul:
+  #全部服务忽略敏感头（全部服务都可传递cookie）
+  sensitive-headers:
+  routes:
+  # /myProduct/product/list -> /product/product/list
+    aaaaaa:
+      path: /myProduct/**
+      serviceId: product
+      sensitiveHeaders:
+  #简洁写法
+#    product: /myProduct/**
+  #排除某些路由
+  ignored-patterns:
+    - /**/product/listForOrder
+management:
+  security:
+    enabled: false
